Fix .og-summary image width on small displays

--- a/src/styles/layouts/container--post.scss
+++ b/src/styles/layouts/container--post.scss
@@ -228,5 +228,15 @@
                 font-size: 1.2em
             }
         }
+
+        .body {
+            article {
+                .og-summary {
+                    img {
+                        max-width: 100%;
+                    }
+                }
+            }
+        }
     }
 }
